# OgreSDKInstaller

./: .gitignore  README.md
osx/CMakePlus/CMakePlus/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
osx/CMakePlus/CMakePlus.xcodeproj/: project.pbxproj
osx/CMakePlus/CMakePlus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/CMakePlus/CMakePlus/Base.lproj/: Main.storyboard
osx/CMakePlus/CMakePlus/iOS/: CMakeLists.txt
osx/CMakePlus/CMakePlus/iOS/sources/: AppDelegate.h  AppDelegate.mm  main.mm
osx/CMakePlus/CMakePlusTests/: CMakePlusTests.m  Info.plist
